Fixed vertical alignment of buttons in the user menu

--- a/src/client/ui/table/table-menu/table-menu.scss
+++ b/src/client/ui/table/table-menu/table-menu.scss
@@ -1,38 +1,31 @@
-﻿.table-menu
-{
+﻿.table-menu {
     border: 2px solid black;
     background-color: lightgrey;
     padding: 5px;
     overflow-y: scroll;
-
     position: absolute;
     top: 100px;
-
     width: 300px;
     height: 200px;
 
-    button + button
-    {
+    button + button {
         margin-left: 8px;
     }
 
-    .bet-actions
-    {
-        button 
-        { 
+    .bet-actions {
+        button {
+
             width: 80px;
             height: 60px;
-
             font-weight: bold;
+            vertical-align: top;
+            text-align: center;
 
-            .action,
-            .amount
+            .action + .amount
             {
-                text-align: center;
+                margin-top: 4px;
             }
 
         }
-
     }
-
 }
